docroot/themes/humsci/humsci_basic/src/scss/partials/preview/_preview.scss
@use 'sass:meta';
@use '../variables/theme' as *;
@use '../variables/colorful-pairings' as *;
@use '../variables/traditional-pairings' as *;
@use '../variables/fonts' as *;
@use '../functions/general' as *;
@use '../mixins/theme' as *;
@use '../mixins/text' as *;

// Font definitions.
@use '../fonts/fonts';

.paragraph-admin-preview {
  @include hb-themes(('colorful', 'airy')) {
    @each $color, $value in $hc-colorful-globals {
      --palette--#{$color}: #{$value};
    }
  }

  @include hb-traditional {
    @each $color, $value in $ht-traditional-globals {
      --palette--#{$color}: #{$value};
    }
  }

  // Load main stylesheet with current theme.
  // All styles will be prefixed with the `.paragraph-admin-preview` class.
  @include meta.load-css(
    '../main',
    $with: ('hb-current-theme': $hb-current-theme)
  );

  // Utility classes.
  @include meta.load-css(
    '../utilities/utilities',
    $with: ('hb-current-theme': $hb-current-theme)
  );

  // Link current color variables.
  .paragraph-item {
    --link-base-current-color: var(--palette--link-base-color);
    --link-base-hover-current-color: var(--palette--link-base-hover-color);
  }

  // Style fixes for specific elements.
  .paragraph--type--hs-sptlght-slder.paragraph--view-mode--preview {
    padding-right: 0;
  }

  .paragraph--type--hs-gradient-hero-slider {
    .slick-dots {
      bottom: -2rem;
    }
  }

  .ptype-hs-carousel .ptype-hs-hero-image,
  .paragraph--type--hs-carousel.ptype-hs-hero-image {
    .hb-hero-overlay {
      background-color: transparent;

      &::before {
        content: '';
      }
    }
  }

  .hs-paragraph-style--well {
    width: auto;
  }

  .hs-paragraph-style--well-full-width {
    left: auto;
    width: auto;
  }

  .hb-color-band {
    &::before,
    &::after {
      display: none;
    }
  }

  .ptype-hs-view {
    h2 {
      font-size: 1.5rem;
    }
  }

  .ptype-hs-timeline .ptype-hs-timeline-item:not(:last-child) {
    .hb-timeline-item[open]::after {
      content: none;
    }
  }

  .ptype-hs-callout-box > p {
    margin: 0 0 1rem !important;
    font-size: 0.875rem;
  }

  .hb-vertical-linked-card__title {
    font-size: hb-calculate-rems(20px);
  }

  .field-hs-postcard-link a {
    color: transparent;
  }

  .hb-timeline-item {
    margin: 0;
  }

  .field-hs-collection-items.item-per-row--2 .paragraph-item {
    margin: 0 !important;
  }

  // Gin styles overrides.
  @include hb-description;

  box-sizing: border-box;
  font-family: $su-font-sans;

  a:hover {
    text-decoration: unset;
  }

  div.link {
    display: block;
    text-decoration: none;
  }

  blockquote::before {
    content: none;
    background-color: transparent;
  }

  details summary {
    background-color: transparent;
    font-weight: 400;
  }

  .hb-vertical-linked-card {
    --link-base-current-color: var(--palette--white);
    --link-base-hover-current-color: var(--palette--white);
  }
}

.hb-raised-cards--uniform-height
  .field-hs-collection-items
  .ptype-hs-postcard
  .paragraph-admin-preview {
  display: flex;

  & div:only-child:not(.hb-card__date-tile, .hb-pill) {
    width: 100%;
  }
}

